stats and docs swagger
